Fixed image overflow and margin-top in articles, removed unnecessary js from <head> and removed author mini thumb from events index.

--- a/gp-au-theme/template/css/generic.css
+++ b/gp-au-theme/template/css/generic.css
@@ -162,6 +162,11 @@ ul, ol {margin:0;padding:0;}
 
 #content p, #content ul, #content ol, #content img {
     margin-top: 1.6em;
+    max-width: 100%;
+}
+
+#content p img {
+	margin: 0;	
 }
 
 #content ul li, #content ol li {
